# BeesBreweriesCase

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dags/: brewery_pipeline_dag.py
docker/airflow/: Dockerfile
src/bronze/: bronze_writer.py
src/gold/: gold_aggregator.py
src/ingestion/: brewery_api_client.py
src/quality/: data_quality.py
src/silver/: silver_transformer.py
src/utils/: config.py  logger.py  spark_session.py  storage_client.py
tests/: conftest.py
tests/integration/: test_dag_integrity.py  test_full_pipeline.py
tests/unit/: test_brewery_api_client.py  test_bronze_writer.py  test_config.py  test_data_quality.py  test_gold_aggregator.py  test_silver_transformer.py  test_spark_session.py  test_storage_client.py
